# DAOForge

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md
app/: next.config.js  package.json  tailwind.config.js
app/src/components/: DAOCard.tsx  Layout.tsx  ProposalCard.tsx  TokenStats.tsx
app/src/pages/: _app.tsx  index.tsx
app/src/pages/dao/: [id].tsx
app/src/pages/proposal/: [id].tsx
app/src/styles/: globals.css
app/src/utils/: constants.ts
cli/: package.json  tsconfig.json
cli/src/: index.ts
cli/src/commands/: dao.ts  proposal.ts  token.ts  treasury.ts  vote.ts
cli/src/utils/: connection.ts  wallet.ts
programs/dao-forge/: Cargo.toml
programs/dao-forge/src/: errors.rs  lib.rs  state.rs
programs/dao-forge/src/instructions/: create_dao.rs  mod.rs  proposal.rs  stake.rs  treasury.rs  vote.rs
tests/: dao-forge.ts
