[package]
  name = "dao-forge"
  version = "0.1.0"
  description = "DAOForge — DAO management on Solana with $FORGE token governance"
  edition = "2021"

  [lib]
  crate-type = ["cdylib", "lib"]
  name = "dao_forge"

  [features]
  no-entrypoint = []
  no-idl = []
  no-log-ix-name = []
  cpi = ["no-entrypoint"]
  default = []

  [dependencies]
  anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
  anchor-spl = { version = "0.30.1", features = ["token", "associated_token", "mint", "token_2022"] }
  